--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,10 @@ jobs:
       run: ngrok config add-authtoken ${{ secrets.NGROK_AUTHTOKEN }}
 
     - name: Start ngrok
-      run: |
-        ngrok http 4200 &
-        sleep 10
+      run: ngrok http 4200 &
 
     - name: Display ngrok URL
       run: curl --silent --show-error http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+
+    - name: Keep the job running
+      run: tail -f /dev/null
