--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,7 @@ jobs:
       run: curl --silent --show-error http://localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
 
     - name: Keep the job running
-      run: tail -f /dev/null
+      run: |
+        while true; do
+          sleep 60
+        done
